fix: correct syntax for gap calculation in tooltip component styles

--- a/gui/src/app/shared/tooltip/tooltip.component.scss
+++ b/gui/src/app/shared/tooltip/tooltip.component.scss
@@ -36,7 +36,7 @@
 
     &::after {
       bottom: 100%;
-      left: calc(50% - styles.$gap-small);
+      left: calc(50% - #{styles.$gap-small});
       border-color: transparent transparent styles.$primary-color-lighter-40 transparent;
     }
   }
@@ -46,7 +46,7 @@
 
     &::after {
       right: 100%;
-      top: calc(50% - styles.$gap-small);
+      top: calc(50% - #{styles.$gap-small});
       border-color: transparent styles.$primary-color-lighter-40 transparent transparent;
     }
   }
